[package]
name = "addr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bip32 = "0.5.1"
bip39 = "2.0.0"
bitcoin = "0.31.1"
chrono = "0.4.34"
cote = "0.4.6"
secp256k1 = "0.28.2"
serde = { version = "1.0.197", features = ["derive"] }
toml = "0.8.10"
tracing = "0.1.40"
tracing-subscriber = "0.3"
